# rally-ci-churn

./: .gitignore  README.md  pyproject.toml
args/: README.md  autonomous_vm.example.yaml  capacity_sweep.example.yaml  fio_distributed.example.yaml  mixed_pressure.example.yaml  net_many_to_one.example.yaml  net_ring.example.yaml  spiky_autonomous_vm.example.yaml
docs/: images.md  outputs.md  scenarios.md  sunbeam-quickstart.md  sweeps.md  tuning.md
images/: README.md
images/ubuntu-fio/: imagecraft.yaml
images/ubuntu-mixed-benchmark/: README.md  imagecraft.yaml
images/ubuntu-netbench/: README.md  imagecraft.yaml
images/ubuntu-stress-ng/: imagecraft.yaml
images/ubuntu-stress-ng/files/etc/rally-ci-churn/: image-profile
scripts/: build_imagecraft_vm.sh  diagnose_fio_workers.sh  setup_uv.sh
src/rally_ci_churn/: results.py
src/rally_ci_churn/bootstrap/: capacity_sweep.py  sunbeam.py
src/rally_ci_churn/fio/: __init__.py  controller_runner.py
src/rally_ci_churn/guest/: runner_main.py
src/rally_ci_churn/mixed/: __init__.py  controller_runner.py
src/rally_ci_churn/net/: __init__.py  controller_runner.py
src/rally_ci_churn/plugins/: __init__.py  autonomous_vm.py  controller_runtime.py  fio_distributed.py  mixed_pressure.py  net_traffic.py
tasks/: README.md  autonomous_vm_waves.yaml.j2  fio_distributed.yaml.j2  mixed_pressure.yaml.j2  net_many_to_one.yaml.j2  net_ring.yaml.j2  quota_edge_autonomous_vm.yaml.j2  spiky_autonomous_vm.yaml.j2  tenant_churn_autonomous_vm.yaml.j2
tests/: test_capacity_sweep.py  test_sunbeam_presets.py
(+2 files in other folders)
